package bo.capital.tec.pet.modules.pago.discount;

import lombok.extern.slf4j.Slf4j;

/**
 * Eslabón terminal de la cadena PIPE.
 */
@Slf4j
public class PipeTerminal extends AbstractDescuentoPipe {

    @Override
    public void procesar(PagoContext context) {
    }
}
